--- a/inicio.html
+++ b/inicio.html
@@ -59,7 +59,7 @@
         <div class="quadrado">
             <div class="row square" id="alunos">
                 <div class="col s12 m12 l6 ">
-                    <h1>4<br> Alunos ativos</h1>
+                    <h1>1<br> Alunos ativos</h1>
                 </div>
                 <div class="col s12 m12 l6 ">
                     <img class="responsive-img" src="img/user.png" alt="">
@@ -71,12 +71,110 @@
         </div>
     </div>
 
-    <!-- LISTA -->
-    <div class="container">
-        <div class="blue">
+    <!-- INICIO DA LISTA -->
+    <div class="container" id="lista">
+        <div class="#ffffff white" style="border-bottom: 2px solid black;">
+            <div class="row">
 
+                <div>
+
+                    <div class="col s12 m12 l12 left-align">
+                        <p>Alunos</p>
+
+                        <div class="nav-wrapper">
+                            <form>
+                                <div class="input-field">
+                                    <input id="search" type="search" required placeholder="Pesquisar">
+                                    <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+                                    <i class="material-icons">close</i>
+                                </div>
+                            </form>
+                        </div>
+
+                    </div>
+
+                    <div class="col s3 m3 l3 center-align">
+                        <h5>Nome</h5>
+                    </div>
+
+                    <div class="col s3 m3 l3 center-align">
+                        <h5>E-mail</h5>
+                    </div>
+
+                    <div class="col s3 m3 l3 center-align">
+                        <h5>Telefone</h5>
+                    </div>
+
+                    <div class="col s3 m3 l3 center-align">
+                        <h5>Presença</h5>
+                    </div>
+
+                </div>
+            </div>
         </div>
     </div>
+
+    <!-- Lista dos alunos -->
+    <div class="container " id="alunosAtivos">
+        <div>
+            <div class="row">
+                <div class="col s3 m3 l3 center-align">
+                    <img class="responsive-img " src="img/avatar.png" alt="avatar do usuario">
+                </div>
+
+                <div class="col s3 m3 l3 center-align">
+                    <p>JUNIN@JOSE.COM</p>
+                </div>
+
+                <div class="col s3 m3 l3 center-align">
+                    <p>0800545145</p>
+                </div>
+
+                <div class="col s3 m3 l3 center-align">
+                    <form action="#">
+                        <p>
+                            <label>
+                        <input type="checkbox" />
+                        <span class="black-text">Presente</span>
+                      </label>
+                        </p>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- FOOTER -->
+    <footer class="page-footer" id="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">Footer Content</h5>
+                    <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                </div>
+                <div class="col l4 offset-l2 s12">
+                    <h5 class="white-text">Links</h5>
+                    <ul>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                © 2014 Copyright Text
+                <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+        </div>
+    </footer>
+
+
+
+
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
