--- a/inicio.html
+++ b/inicio.html
@@ -27,21 +27,12 @@
                 </a>
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
-                    <li><a href="#" class="black-text">Início</a></li>
-                    <li><a href="#" class="black-text">Sobre</a></li>
-                    <li>
-                        <a class="dropdown-trigger black-text" data-target="dropdown-menu" href="#">
-              Contatos <i class="material-icons right">arrow_drop_down</i>
-            </a>
-                    </li>
-                </ul>
-
-                <!-- Dropdown -->
-                <ul id="dropdown-menu" class="dropdown-content">
-                    <li><a href="#" class="black-text">Telefone</a></li>
-                    <li><a href="#" class="black-text">E-mail</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#" class="black-text">Redes sociais</a></li>
+                    <li><a href="#" class="black-text">Home</a></li>
+                    <li><a href="#" class="black-text">Professor</a></li>
+                    <li><a href="#" class="black-text">Crie</a></li>
+                    <li><a href="#" class="black-text">Caléndario</a></li>
+                    <li><a href="#" class="black-text">Controle</a></li>
+                    <li><a href="#" class="black-text">Treino</a></li>
                 </ul>
             </div>
         </nav>
@@ -49,9 +40,12 @@
 
     <!-- Menu Mobile -->
     <ul id="mobile-navbar" class="sidenav">
-        <li><a href="#">Início</a></li>
-        <li><a href="#">Sobre</a></li>
-        <li><a href="#">Contatos</a></li>
+        <li><a href="#" class="black-text">Home</a></li>
+        <li><a href="#" class="black-text">Professor</a></li>
+        <li><a href="#" class="black-text">Crie</a></li>
+        <li><a href="#" class="black-text">Caléndario</a></li>
+        <li><a href="#" class="black-text">Controle</a></li>
+        <li><a href="#" class="black-text">Treino</a></li>
     </ul>
 
     <!-- Alunos -->
