--- a/alunos.html
+++ b/alunos.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Materialize - Navbar</title>
+    <title>Chamada</title>
     <!-- Compiled and minified CSS -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="./css/inicio.css">
+    <link rel="stylesheet" href="./css/alunos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 
@@ -133,6 +133,9 @@
                       </label>
                         </p>
                     </form>
+                </div>
+                <div class="col l3 m2 s3 right-align">
+                    <button>REMOVER ALUNO</button>
                 </div>
             </div>
         </div>
