--- a/index.html
+++ b/index.html
@@ -2,157 +2,155 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Materialize - Navbar</title>
-  <!-- Compiled and minified CSS -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Materialize - Navbar</title>
+    <!-- Compiled and minified CSS -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 
 <body>
 
-  <div class="navbar-fixed">
-    <nav>
-      <div class="nav-wrapper #ffffff white">
-        <!-- Logo -->
-        <a href="#" class="brand-logo"><img class="responsive-img" src="img/logo.png" alt="Logo da Pagina"
-            style="width: 300px;"></a></a>
+    <div class="navbar-fixed">
+        <nav>
+            <div class="nav-wrapper #ffffff white">
+                <!-- Logo -->
+                <a href="#" class="brand-logo"><img class="responsive-img" src="img/logo.png" alt="Logo da Pagina" style="width: 300px;"></a>
+                </a>
 
-        <!-- Ícone para abrir no Mobile -->
-        <a href="#" data-target="mobile-navbar" class="sidenav-trigger">
-          <i class="material-icons black-text">menu</i>
-        </a>
+                <!-- Ícone para abrir no Mobile -->
+                <a href="#" data-target="mobile-navbar" class="sidenav-trigger">
+                    <i class="material-icons black-text">menu</i>
+                </a>
 
-        <ul id="navbar-items" class="right hide-on-med-and-down">
-          <li><a href="#" class="black-text">Início</a></li>
-          <li><a href="#" class="black-text">Sobre</a></li>
-          <li>
-            <a class="dropdown-trigger black-text" data-target="dropdown-menu" href="#">
+                <ul id="navbar-items" class="right hide-on-med-and-down">
+                    <li><a href="#" class="black-text">Início</a></li>
+                    <li><a href="#" class="black-text">Sobre</a></li>
+                    <li>
+                        <a class="dropdown-trigger black-text" data-target="dropdown-menu" href="#">
               Contatos <i class="material-icons right">arrow_drop_down</i>
             </a>
-          </li>
-        </ul>
+                    </li>
+                </ul>
 
-        <!-- Dropdown -->
-        <ul id="dropdown-menu" class="dropdown-content">
-          <li><a href="#" class="black-text">Telefone</a></li>
-          <li><a href="#" class="black-text">E-mail</a></li>
-          <li class="divider"></li>
-          <li><a href="#" class="black-text">Redes sociais</a></li>
-        </ul>
-      </div>
-    </nav>
-  </div>
-
-  <!-- Menu Mobile -->
-  <ul id="mobile-navbar" class="sidenav">
-    <li><a href="#">Início</a></li>
-    <li><a href="#">Sobre</a></li>
-    <li><a href="#">Contatos</a></li>
-  </ul>
-
-  <!-- BANNER -->
-  <div class="row" id="banner">
-    <div class="col s12 m6 l5">
-      <img class="responsive-img" src="img/imagem.png" alt="" width="1000vh">
+                <!-- Dropdown -->
+                <ul id="dropdown-menu" class="dropdown-content">
+                    <li><a href="#" class="black-text">Telefone</a></li>
+                    <li><a href="#" class="black-text">E-mail</a></li>
+                    <li class="divider"></li>
+                    <li><a href="#" class="black-text">Redes sociais</a></li>
+                </ul>
+            </div>
+        </nav>
     </div>
-    <div class="col s12 m6 l7">
-      <h1 class="right-align">MONITORE <br> SEUS ALUNOS</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
-      </p>
-      <button>Saber mais</button>
-    </div>
-  </div>
 
-  <!-- BENEFICIOS -->
-  <div class="row" id="beneficios">
-    <div class="col s12 m12 l4 center-align">
-      <img class="responsive-img" src="img/qualidade.png" alt="">
-      <h4 class="center-align">SERVIÇO DE QUALIDADE</h4>
-      <p class="center-align">No High Performance, você pode experimentar o melhor nível de serviço ao cliente.</p>
-    </div>
-    <div class="col s12 m12 l4  center-align">
-      <img class="responsive-img" src="img/gestao.png" alt="">
-      <h4 class="center-align">GESTÃO COMPLETA</h4>
-      <p class="center-align">Tenha um controle de fluxo de caixa organizado, acessos administrativos e outros
-        funcionalidades.</p>
-    </div>
-    <div class="col s12 m12 l4 center-align">
-      <img class="responsive-img" src="img/alunos.png" alt="">
-      <h4 class="center-align">FICHA DOS ALUNOS</h4>
-      <p class="center-align">Tenha uma ficha completa dos seus alunos com integração na API do Strava.</p>
-    </div>
-  </div>
+    <!-- Menu Mobile -->
+    <ul id="mobile-navbar" class="sidenav">
+        <li><a href="#">Início</a></li>
+        <li><a href="#">Sobre</a></li>
+        <li><a href="#">Contatos</a></li>
+    </ul>
 
-  <!-- ILUSTRACO -->
-  <div class="row" id="ilustracao">
-    <div class="col s12 m12 l5 left-align">
-      <div class="square center-align">
-        <h6>COMECE <span>AGORA</span> A USAR<br> O <span>HIGH PERFORMANCE</span></h6>
-        <p class="right-align">Cadastre-se<br>
-          e comece a usar!</p>
-      </div>
-      <button>SE INCREVER</button>
-    </div>
-    <div class="col s12 m12 l7 left-align">
-      <img class="responsive-img" src="img/ilustracao.png" alt="">
-    </div>
-  </div>
-
-  <!-- FORUM -->
-  <div class="container center-align" id="forum">
-    <h2>NOSOO FORUM</h2>
-  </div>
-  <div class="carousel">
-    <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/250/250/nature/1"></a>
-    <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/250/250/nature/2"></a>
-    <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/250/250/nature/3"></a>
-    <a class="carousel-item" href="#four!"><img src="https://lorempixel.com/250/250/nature/4"></a>
-    <a class="carousel-item" href="#five!"><img src="https://lorempixel.com/250/250/nature/5"></a>
-  </div>
-
-
-  <!-- FOOTER -->
-  <footer class="page-footer" id="footer">
-    <div class="container">
-      <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Footer Content</h5>
-          <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+    <!-- BANNER -->
+    <div class="row" id="banner">
+        <div class="col s12 m6 l5">
+            <img class="responsive-img" src="img/imagem.png" alt="" width="1000vh">
         </div>
-        <div class="col l4 offset-l2 s12">
-          <h5 class="white-text">Links</h5>
-          <ul>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-          </ul>
+        <div class="col s12 m6 l7">
+            <h1 class="right-align">MONITORE <br> SEUS ALUNOS</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
+            </p>
+            <button>Saber mais</button>
         </div>
-      </div>
     </div>
-    <div class="footer-copyright">
-      <div class="container">
-        © 2014 Copyright Text
-        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-      </div>
+
+    <!-- BENEFICIOS -->
+    <div class="row" id="beneficios">
+        <div class="col s12 m12 l4 center-align">
+            <img class="responsive-img" src="img/qualidade.png" alt="">
+            <h4 class="center-align">SERVIÇO DE QUALIDADE</h4>
+            <p class="center-align">No High Performance, você pode experimentar o melhor nível de serviço ao cliente.</p>
+        </div>
+        <div class="col s12 m12 l4  center-align">
+            <img class="responsive-img" src="img/gestao.png" alt="">
+            <h4 class="center-align">GESTÃO COMPLETA</h4>
+            <p class="center-align">Tenha um controle de fluxo de caixa organizado, acessos administrativos e outros funcionalidades.
+            </p>
+        </div>
+        <div class="col s12 m12 l4 center-align">
+            <img class="responsive-img" src="img/alunos.png" alt="">
+            <h4 class="center-align">FICHA DOS ALUNOS</h4>
+            <p class="center-align">Tenha uma ficha completa dos seus alunos com integração na API do Strava.</p>
+        </div>
     </div>
-  </footer>
+
+    <!-- ILUSTRACO -->
+    <div class="row" id="ilustracao">
+        <div class="col s12 m12 l5 left-align">
+            <div class="square center-align">
+                <h6>COMECE <span>AGORA</span> A USAR<br> O <span>HIGH PERFORMANCE</span></h6>
+                <p class="right-align">Cadastre-se<br> e comece a usar!</p>
+            </div>
+            <button>SE INCREVER</button>
+        </div>
+        <div class="col s12 m12 l7 left-align">
+            <img class="responsive-img" src="img/ilustracao.png" alt="">
+        </div>
+    </div>
+
+    <!-- FORUM -->
+    <div class="container center-align" id="forum">
+        <h2>NOSOO FORUM</h2>
+    </div>
+    <div class="carousel">
+        <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/250/250/nature/1"></a>
+        <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/250/250/nature/2"></a>
+        <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/250/250/nature/3"></a>
+        <a class="carousel-item" href="#four!"><img src="https://lorempixel.com/250/250/nature/4"></a>
+        <a class="carousel-item" href="#five!"><img src="https://lorempixel.com/250/250/nature/5"></a>
+    </div>
 
 
-  <!-- Compiled and minified JavaScript -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script>
-    $(document).ready(function () {
-      $('.carousel').carousel();
-    });
-  </script>
-  <script src="./js/main.js"></script>
+    <!-- FOOTER -->
+    <footer class="page-footer" id="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">Footer Content</h5>
+                    <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                </div>
+                <div class="col l4 offset-l2 s12">
+                    <h5 class="white-text">Links</h5>
+                    <ul>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                © 2014 Copyright Text
+                <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+        </div>
+    </footer>
+
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('.carousel').carousel();
+        });
+    </script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
