--- a/alunos.html
+++ b/alunos.html
@@ -27,11 +27,10 @@
                 </a>
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
-                    <li><a href="#" class="black-text">Home</a></li>
-                    <li><a href="#" class="black-text">Professor</a></li>
-                    <li><a href="#" class="black-text">Crie</a></li>
-                    <li><a href="#" class="black-text">Caléndario</a></li>
-                    <li><a href="#" class="black-text">Controle</a></li>
+                    <li><a href="index.html" class="black-text">Home</a></li>
+                    <li><a href="alunos.html" class="black-text">Alunos</a></li>
+                    <li><a href="calendario.html" class="black-text">Crie</a></li>
+                    <li><a href="controle.html" class="black-text">Controle</a></li>
                     <li><a href="#" class="black-text">Treino</a></li>
                 </ul>
             </div>
@@ -40,13 +39,17 @@
 
     <!-- Menu Mobile -->
     <ul id="mobile-navbar" class="sidenav">
-        <li><a href="#" class="black-text">Home</a></li>
-        <li><a href="#" class="black-text">Professor</a></li>
-        <li><a href="#" class="black-text">Crie</a></li>
-        <li><a href="#" class="black-text">Caléndario</a></li>
-        <li><a href="#" class="black-text">Controle</a></li>
+        <li><a href="index.html" class="black-text">Home</a></li>
+        <li><a href="alunos.html" class="black-text">Alunos</a></li>
+        <li><a href="calendario.html" class="black-text">Crie</a></li>
+        <li><a href="controle.html" class="black-text">Controle</a></li>
         <li><a href="#" class="black-text">Treino</a></li>
     </ul>
+
+    <!-- TITULO -->
+    <div class="col s11 m6 l5">
+        <h1>Alunos</h1>
+    </div>
 
     <!-- Alunos -->
     <div class="container">
@@ -56,7 +59,7 @@
                     <h1>1<br> Alunos ativos</h1>
                 </div>
                 <div class="col s12 m12 l6 ">
-                    <img class="responsive-img" src="img/user.png" alt="">
+                    <img class="responsive-img" src="img/user.png" alt="Alunos ativos">
                 </div>
             </div>
             <div class="col s12 m12 l12 right-align baixoQuadrado">
