--- a/controle.html
+++ b/controle.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="img/Iconlogo.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Controle</title>
+    <!-- Compiled and minified CSS -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="css/professor.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/controle.css">
 </head>
 
-<body onload="renderDate()">
+<body>
+
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper #ffffff white">
@@ -24,11 +28,10 @@
                 </a>
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
-                    <li><a href="#" class="black-text">Home</a></li>
-                    <li><a href="#" class="black-text">Professor</a></li>
-                    <li><a href="#" class="black-text">Crie</a></li>
-                    <li><a href="#" class="black-text">Caléndario</a></li>
-                    <li><a href="#" class="black-text">Controle</a></li>
+                    <li><a href="index.html" class="black-text">Home</a></li>
+                    <li><a href="alunos.html" class="black-text">Alunos</a></li>
+                    <li><a href="calendario.html" class="black-text">Crie</a></li>
+                    <li><a href="controle.html" class="black-text">Controle</a></li>
                     <li><a href="#" class="black-text">Treino</a></li>
                 </ul>
             </div>
@@ -37,66 +40,51 @@
 
     <!-- Menu Mobile -->
     <ul id="mobile-navbar" class="sidenav">
-        <li><a href="#" class="black-text">Home</a></li>
-        <li><a href="#" class="black-text">Professor</a></li>
-        <li><a href="#" class="black-text">Crie</a></li>
-        <li><a href="#" class="black-text">Caléndario</a></li>
-        <li><a href="#" class="black-text">Controle</a></li>
+        <li><a href="index.html" class="black-text">Home</a></li>
+        <li><a href="alunos.html" class="black-text">Alunos</a></li>
+        <li><a href="calendario.html" class="black-text">Crie</a></li>
+        <li><a href="controle.html" class="black-text">Controle</a></li>
         <li><a href="#" class="black-text">Treino</a></li>
     </ul>
 
-    <!-- CALENDARIO -->
-    <div id="calendario">
-        <div class="wrapper">
-            <div class="calendar">
-                <div class="month">
-                    <div class="prev" onclick="moveDate('prev')">
-                        <span>&#10094;</span>
-                    </div>
-                    <div>
-                        <h2 id="month"></h2>
-                        <p id="date_str"></p>
-                    </div>
-                    <div class="next" onclick="moveDate('next')">
-                        <span>&#10095;</span>
-                    </div>
-                </div>
-                <div class="weekdays">
-                    <div>Seg</div>
-                    <div>Ter</div>
-                    <div>Qua</div>
-                    <div>Qui</div>
-                    <div>Sex</div>
-                    <div>Sab</div>
-                    <div>Dom</div>
-                </div>
-                <div class="days">
-
-                </div>
-            </div>
-        </div>
+    <!-- TITULO -->
+    <div class="col s11 m6 l5">
+        <h1>Controle</h1>
     </div>
 
-    <!-- Lista dos alunos -->
-    <div class="container " id="alunosAtivos">
-        <div>
-            <div class="row">
-                <div class="col s4 m4 l4 center-align">
-                    <img class="responsive-img " src="img/avatar.png" alt="avatar do usuario">
-                </div>
-
-                <div class="col s4 m4 l4 center-align">
-                    <p>Aula de musculação</p>
-                </div>
-
-                <div class="col s4 m4 l4 center-align">
-                    <p>Horario: 8:30</p>
-                </div>
-                <div class="col s4 m4 l12 right-align">
-                    <button>REMOVER ALUNO</button>
+    <!-- ALUNOS -->
+    <div class="container">
+        <a href="alunos.html">
+            <div class="quadrado">
+                <div class="row square" id="alunos">
+                    <div class="col s12 m12 l6 ">
+                        <h2>1<br> Alunos ativos</h2>
+                    </div>
+                    <div class="col s12 m12 l6 ">
+                        <img class="responsive-img" src="img/user.png" alt="alunos ativos">
+                    </div>
                 </div>
             </div>
-        </div>
+        </a>
+    </div>
+
+    <!-- PAGAMENTOS -->
+    <div class="container">
+        <a href="#">
+            <div class="quadrado2">
+                <div class="row square" id="alunos">
+                    <div class="col s12 m12 l6 ">
+                        <h2>Pagamentos</h2>
+                    </div>
+                    <div class="col s12 m12 l6 ">
+                        <img class="responsive-img" src="img/money.png" alt="Pagamentos">
+                    </div>
+                    <div class="col s12 m12 l12 right-align baixoQuadrado">
+                        <p>1 PAGAMENTO PENDENTE</p>
+                    </div>
+                </div>
+            </div>
+        </a>
     </div>
 
 
@@ -128,7 +116,8 @@
     </footer>
 
 
-    <script src="./js/calendario.js"></script>
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="./js/main.js"></script>
