--- a/crie.html
+++ b/crie.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="css/calendario.css">
+    <link rel="stylesheet" href="css/crie.css">
     <title>Document</title>
 </head>
 
@@ -24,11 +24,10 @@
                 </a>
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
-                    <li><a href="#" class="black-text">Home</a></li>
-                    <li><a href="#" class="black-text">Professor</a></li>
-                    <li><a href="#" class="black-text">Crie</a></li>
-                    <li><a href="#" class="black-text">Caléndario</a></li>
-                    <li><a href="#" class="black-text">Controle</a></li>
+                    <li><a href="index.html" class="black-text">Home</a></li>
+                    <li><a href="alunos.html" class="black-text">Alunos</a></li>
+                    <li><a href="crie.html" class="black-text">Crie</a></li>
+                    <li><a href="controle.html" class="black-text">Controle</a></li>
                     <li><a href="#" class="black-text">Treino</a></li>
                 </ul>
             </div>
@@ -37,13 +36,17 @@
 
     <!-- Menu Mobile -->
     <ul id="mobile-navbar" class="sidenav">
-        <li><a href="#" class="black-text">Home</a></li>
-        <li><a href="#" class="black-text">Professor</a></li>
-        <li><a href="#" class="black-text">Crie</a></li>
-        <li><a href="#" class="black-text">Caléndario</a></li>
-        <li><a href="#" class="black-text">Controle</a></li>
+        <li><a href="index.html" class="black-text">Home</a></li>
+        <li><a href="alunos.html" class="black-text">Alunos</a></li>
+        <li><a href="calendario.html" class="black-text">Crie</a></li>
+        <li><a href="controle.html" class="black-text">Controle</a></li>
         <li><a href="#" class="black-text">Treino</a></li>
     </ul>
+
+    <!-- TITULO -->
+    <div class="col s11 m6 l5">
+        <h1>Crie</h1>
+    </div>
 
     <!-- CALENDARIO -->
     <div id="calendario">
@@ -105,24 +108,25 @@
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
-                    <h5 class="white-text">Footer Content</h5>
-                    <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                    <h5 class="white-text">HIGH PERFORMANCE</h5>
+                    <p class="grey-text text-lighten-4">Monitores os seus alunos.</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <h5 class="white-text">Links</h5>
                     <ul>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                        <li><a class="grey-text text-lighten-3" href="index.html">Home</a></li>
+                        <li><a class="grey-text text-lighten-3" href="alunos.html">Alunos</a></li>
+                        <li><a class="grey-text text-lighten-3" href="crie.html">Crie</a></li>
+                        <li><a class="grey-text text-lighten-3" href="controle.html">Controle</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Treino</a></li>
                     </ul>
                 </div>
             </div>
         </div>
         <div class="footer-copyright">
             <div class="container">
-                © 2014 Copyright Text
-                <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+                © 2020 High Performance Copyright
+                <a class="grey-text text-lighten-4 right" href="logoMakr.com">Created my free logo at LogoMakr.com</a>
             </div>
         </div>
     </footer>
