--- a/index.html
+++ b/index.html
@@ -31,17 +31,15 @@
                     <li><a href="#" class="black-text">Sobre</a></li>
                     <li>
                         <a class="dropdown-trigger black-text" data-target="dropdown-menu" href="#">
-              Contatos <i class="material-icons right">arrow_drop_down</i>
+              Entrar <i class="material-icons right">arrow_drop_down</i>
             </a>
                     </li>
                 </ul>
 
                 <!-- Dropdown -->
                 <ul id="dropdown-menu" class="dropdown-content">
-                    <li><a href="#" class="black-text">Telefone</a></li>
-                    <li><a href="#" class="black-text">E-mail</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#" class="black-text">Redes sociais</a></li>
+                    <li><a href="#" class="black-text">Entrar</a></li>
+                    <li><a href="#" class="black-text">Registrar</a></li>
                 </ul>
             </div>
         </nav>
@@ -119,24 +117,24 @@
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
-                    <h5 class="white-text">Footer Content</h5>
-                    <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                    <h5 class="white-text">HIGH PERFORMANCE</h5>
+                    <p class="grey-text text-lighten-4">Monitores os seus alunos.</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <h5 class="white-text">Links</h5>
                     <ul>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                        <li><a class="grey-text text-lighten-3" href="index.html">Home</a></li>
+                        <li><a class="grey-text text-lighten-3" href="alunos.html">Sobre</a></li>
+                        <li><a class="grey-text text-lighten-3" href="crie.html">Entrar</a></li>
+                        <li><a class="grey-text text-lighten-3" href="controle.html">Registrar</a></li>
                     </ul>
                 </div>
             </div>
         </div>
         <div class="footer-copyright">
             <div class="container">
-                © 2014 Copyright Text
-                <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+                © 2020 High Performance Copyright
+                <a class="grey-text text-lighten-4 right" href="logoMakr.com">Created my free logo at LogoMakr.com</a>
             </div>
         </div>
     </footer>
