--- a/alunos.html
+++ b/alunos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Chamada</title>
+    <title>Alunos</title>
     <!-- Compiled and minified CSS -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="./css/alunos.css">
@@ -29,7 +29,7 @@
                 <ul id="navbar-items" class="right hide-on-med-and-down">
                     <li><a href="index.html" class="black-text">Home</a></li>
                     <li><a href="alunos.html" class="black-text">Alunos</a></li>
-                    <li><a href="calendario.html" class="black-text">Crie</a></li>
+                    <li><a href="crie.html" class="black-text">Crie</a></li>
                     <li><a href="controle.html" class="black-text">Controle</a></li>
                     <li><a href="#" class="black-text">Treino</a></li>
                 </ul>
@@ -47,7 +47,7 @@
     </ul>
 
     <!-- TITULO -->
-    <div class="col s11 m6 l5">
+    <div class="col s11 m6 l5 titulo">
         <h1>Alunos</h1>
     </div>
 
@@ -56,7 +56,7 @@
         <div class="quadrado">
             <div class="row square" id="alunos">
                 <div class="col s12 m12 l6 ">
-                    <h1>1<br> Alunos ativos</h1>
+                    <h2>1<br> Alunos ativos</h2>
                 </div>
                 <div class="col s12 m12 l6 ">
                     <img class="responsive-img" src="img/user.png" alt="Alunos ativos">
@@ -150,24 +150,25 @@
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
-                    <h5 class="white-text">Footer Content</h5>
-                    <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                    <h5 class="white-text">HIGH PERFORMANCE</h5>
+                    <p class="grey-text text-lighten-4">Monitores os seus alunos.</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <h5 class="white-text">Links</h5>
                     <ul>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                        <li><a class="grey-text text-lighten-3" href="index.html">Home</a></li>
+                        <li><a class="grey-text text-lighten-3" href="alunos.html">Alunos</a></li>
+                        <li><a class="grey-text text-lighten-3" href="crie.html">Crie</a></li>
+                        <li><a class="grey-text text-lighten-3" href="controle.html">Controle</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Treino</a></li>
                     </ul>
                 </div>
             </div>
         </div>
         <div class="footer-copyright">
             <div class="container">
-                © 2014 Copyright Text
-                <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+                © 2020 High Performance Copyright
+                <a class="grey-text text-lighten-4 right" href="logoMakr.com">Created my free logo at LogoMakr.com</a>
             </div>
         </div>
     </footer>
