FInalizando pagina crie

--- a/alunos.html
+++ b/alunos.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="img/Iconlogo.png" type="image/x-icon">
     <title>Alunos</title>
     <!-- Compiled and minified CSS -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -18,7 +19,7 @@
         <nav>
             <div class="nav-wrapper #ffffff white">
                 <!-- Logo -->
-                <a href="#" class="brand-logo"><img class="responsive-img" src="img/logo.png" alt="Logo da Pagina" style="width: 300px;"></a>
+                <a href="index.html" class="brand-logo"><img class="responsive-img" src="img/logo.png" alt="Logo da Pagina" style="width: 300px;"></a>
                 </a>
 
                 <!-- Ícone para abrir no Mobile -->
@@ -168,7 +169,7 @@
         <div class="footer-copyright">
             <div class="container">
                 © 2020 High Performance Copyright
-                <a class="grey-text text-lighten-4 right" href="logoMakr.com">Created my free logo at LogoMakr.com</a>
+                <a class="grey-text text-lighten-4 right" href="https://logomakr.com">Created my free logo at LogoMakr.com</a>
             </div>
         </div>
     </footer>
