--- a/crie.html
+++ b/crie.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="img/Iconlogo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="css/crie.css">
-    <title>Document</title>
+    <title>Crie</title>
 </head>
 
 <body onload="renderDate()">
@@ -113,7 +113,6 @@
                     <p class="grey-text text-lighten-4">Monitores os seus alunos.</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
-                    <h5 class="white-text">Links</h5>
                     <ul>
                         <li><a class="grey-text text-lighten-3" href="index.html">Home</a></li>
                         <li><a class="grey-text text-lighten-3" href="alunos.html">Alunos</a></li>
