--- a/alunos.html
+++ b/alunos.html
@@ -32,7 +32,7 @@
                     <li><a href="alunos.html" class="black-text">Alunos</a></li>
                     <li><a href="crie.html" class="black-text">Crie</a></li>
                     <li><a href="controle.html" class="black-text">Controle</a></li>
-                    <li><a href="#" class="black-text">Treino</a></li>
+                    <li><a href="treino.html" class="black-text">Treino</a></li>
                 </ul>
             </div>
         </nav>
@@ -151,24 +151,24 @@
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
-                    <h5 class="white-text">HIGH PERFORMANCE</h5>
-                    <p class="grey-text text-lighten-4">Monitores os seus alunos.</p>
+                    <h5 class="black-text">HIGH PERFORMANCE</h5>
+                    <p class="black-text text-lighten-4">Monitores os seus alunos.</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <ul>
-                        <li><a class="grey-text text-lighten-3" href="index.html">Home</a></li>
-                        <li><a class="grey-text text-lighten-3" href="alunos.html">Alunos</a></li>
-                        <li><a class="grey-text text-lighten-3" href="crie.html">Crie</a></li>
-                        <li><a class="grey-text text-lighten-3" href="controle.html">Controle</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Treino</a></li>
+                        <li><a class="black-text text-lighten-3" href="index.html">Home</a></li>
+                        <li><a class="black-text text-lighten-3" href="#">Alunos</a></li>
+                        <li><a class="black-text text-lighten-3" href="crie.html">Crie</a></li>
+                        <li><a class="black-text text-lighten-3" href="controle.html">Controle</a></li>
+                        <li><a class="black-text text-lighten-3" href="treino.html">Treino</a></li>
                     </ul>
                 </div>
             </div>
         </div>
         <div class="footer-copyright">
-            <div class="container">
+            <div class="container black-text">
                 © 2020 High Performance Copyright
-                <a class="grey-text text-lighten-4 right" href="https://logomakr.com">Created my free logo at LogoMakr.com</a>
+                <a class="black-text text-lighten-4 right" href="https://logomakr.com">Created my free logo at LogoMakr.com</a>
             </div>
         </div>
     </footer>
