--- a/index.html
+++ b/index.html
@@ -244,23 +244,24 @@
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
-                    <h5 class="white-text">HIGH PERFORMANCE</h5>
-                    <p class="grey-text text-lighten-4">Monitores os seus alunos.</p>
+                    <h5 class="black-text">HIGH PERFORMANCE</h5>
+                    <p class="black-text text-lighten-4">Monitores os seus alunos.</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <ul>
-                        <li><a class="grey-text text-lighten-3" href="index.html">Home</a></li>
-                        <li><a class="grey-text text-lighten-3" href="alunos.html">Sobre</a></li>
-                        <li><a class="grey-text text-lighten-3" href="crie.html">Entrar</a></li>
-                        <li><a class="grey-text text-lighten-3" href="controle.html">Registrar</a></li>
+                        <li><a class="black-text text-lighten-3" href="index.html">Home</a></li>
+                        <li><a class="black-text text-lighten-3" href="alunos.html">Alunos</a></li>
+                        <li><a class="black-text text-lighten-3" href="crie.html">Crie</a></li>
+                        <li><a class="black-text text-lighten-3" href="controle.html">Controle</a></li>
+                        <li><a class="black-text text-lighten-3" href="#!">Treino</a></li>
                     </ul>
                 </div>
             </div>
         </div>
         <div class="footer-copyright">
-            <div class="container">
+            <div class="container black-text">
                 © 2020 High Performance Copyright
-                <a class="grey-text text-lighten-4 right" href="https://logomakr.com">Created my free logo at LogoMakr.com</a>
+                <a class="black-text text-lighten-4 right" href="https://logomakr.com">Created my free logo at LogoMakr.com</a>
             </div>
         </div>
     </footer>
