Arrumando cores, footer etc

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 </a>
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
-                    <li><a href="#" class="black-text">Início</a></li>
-                    <li><a href="#" class="black-text">Sobre</a></li>
+                    <li><a href="index.html" class="black-text">Home</a></li>
+                    <li><a href="sobre.html" class="black-text">Sobre</a></li>
                     <li>
                         <a class="dropdown-trigger black-text" data-target="dropdown-menu" href="#">
               Entrar <i class="material-icons right">arrow_drop_down</i>
@@ -49,9 +49,10 @@
 
     <!-- Menu Mobile -->
     <ul id="mobile-navbar" class="sidenav">
-        <li><a href="#">Início</a></li>
-        <li><a href="#">Sobre</a></li>
-        <li><a href="#">Contatos</a></li>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="sobre.html">Sobre</a></li>
+        <li><a href="#" class="black-text">Entrar</a></li>
+        <li><a href="#" class="black-text">Registrar</a></li>
     </ul>
 
     <!-- BANNER -->
@@ -132,7 +133,7 @@
                 <span>Muito legal recomendei para todos os meus amigos!</span>
             </section>
         </a>
-        <a class="carousel-item" href="#two!">
+        <a class="carousel-item center-align" href="#two!">
             <section>
                 <img src="img/avatar.png" alt="Depoimento 1">
                 <h5>JOÃO</h5>
@@ -158,7 +159,7 @@
                 <span>Muito legal recomendei para todos os meus amigos!</span>
             </section>
         </a>
-        <a class="carousel-item" href="#three!">
+        <a class="carousel-item center-align" href="#three!">
             <section>
                 <img src="img/avatar.png" alt="Depoimento 1">
                 <h5>JOÃO</h5>
@@ -184,7 +185,7 @@
                 <span>Muito legal recomendei para todos os meus amigos!</span>
             </section>
         </a>
-        <a class="carousel-item" href="#four!">
+        <a class="carousel-item center-align" href="#four!">
             <section>
                 <img src="img/avatar.png" alt="Depoimento 1">
                 <h5>JOÃO</h5>
@@ -210,7 +211,7 @@
                 <span>Muito legal recomendei para todos os meus amigos!</span>
             </section>
         </a>
-        <a class="carousel-item" href="#five!">
+        <a class="carousel-item center-align" href="#five!">
             <section>
                 <img src="img/avatar.png" alt="Depoimento 1">
                 <h5>JOÃO</h5>
@@ -250,10 +251,9 @@
                 <div class="col l4 offset-l2 s12">
                     <ul>
                         <li><a class="black-text text-lighten-3" href="index.html">Home</a></li>
-                        <li><a class="black-text text-lighten-3" href="alunos.html">Alunos</a></li>
-                        <li><a class="black-text text-lighten-3" href="crie.html">Crie</a></li>
-                        <li><a class="black-text text-lighten-3" href="controle.html">Controle</a></li>
-                        <li><a class="black-text text-lighten-3" href="#!">Treino</a></li>
+                        <li><a class="black-text text-lighten-3" href="sobre.html">Sobre</a></li>
+                        <li><a class="black-text text-lighten-3" href="#">Entrar</li>
+                        <li><a class="black-text text-lighten-3" href="#">Registrar</a></li>
                     </ul>
                 </div>
             </div>
