--- a/sobre.html
+++ b/sobre.html
@@ -9,7 +9,7 @@
     <title>Sobre</title>
     <!-- Compiled and minified CSS -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/sobre.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 
@@ -28,8 +28,8 @@
                 </a>
 
                 <ul id="navbar-items" class="right hide-on-med-and-down">
-                    <li><a href="#" class="black-text">Início</a></li>
-                    <li><a href="#" class="black-text">Sobre</a></li>
+                    <li><a href="index.html" class="black-text">Home</a></li>
+                    <li><a href="sobre.html" class="black-text">Sobre</a></li>
                     <li>
                         <a class="dropdown-trigger black-text" data-target="dropdown-menu" href="#">
               Entrar <i class="material-icons right">arrow_drop_down</i>
@@ -48,10 +48,77 @@
 
     <!-- Menu Mobile -->
     <ul id="mobile-navbar" class="sidenav">
-        <li><a href="#">Início</a></li>
-        <li><a href="#">Sobre</a></li>
-        <li><a href="#">Contatos</a></li>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="sobre.html">Sobre</a></li>
+        <li><a href="#" class="black-text">Entrar</a></li>
+        <li><a href="#" class="black-text">Registrar</a></li>
     </ul>
+
+
+    <!-- SOBRE -->
+    <div id="sobre">
+        <div class="row">
+            <div class="col s12 m6 l6">
+                <p>Com o <span>High Performance</span> você pode monitorar todos os dados do aplicativo Strava do seus alunos, marcar aulas, ter um gestão dos seus pagamentos, entre outros. Tudo isso apenas em um só lugar.</p>
+            </div>
+            <div class="col s12 m6 l6">
+                <img class="responsive-img" src="img/atividades.png" alt="">
+            </div>
+        </div>
+    </div>
+
+
+    <!-- TIME -->
+    <div class="container center-align" id="tituloTime">
+        <h2>NOSSO TIME</h2>
+    </div>
+
+
+    <div id="time">
+        <div class="container">
+            <div class="row">
+                <div class="col s12 m6 l6 center-align">
+                    <img class="responsive-img" src="img/rafael.jpg" alt="">
+                    <p>Rafael Santana</p>
+                    <span>Sei lá</span>
+                    <br>
+                    <br>
+                </div>
+                <div class="col s12 m6 l6 center-align">
+                    <img class="responsive-img" src="img/roni.png" alt="">
+                    <p>Roni Cleber</p>
+                    <span>Sei lá</span>
+                    <br>
+                    <br>
+                </div>
+                <div class="col s12 m6 l6 center-align">
+                    <img class="responsive-img" src="img/paulo.png" alt="">
+                    <p>Paulo Ernesto</p>
+                    <span>Sei lá</span>
+                    <br>
+                    <br>
+                </div>
+                <div class="col s12 m6 l6 center-align">
+                    <img class="responsive-img" src="img/diogo.png" alt="">
+                    <p>Diogo</p>
+                    <span>Sei lá</span>
+                    <br>
+                    <br>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- BOTAO -->
+    <div class="container center-align" id="tituloBtn">
+        <h2>Junte-se à nossa equipe!</h2>
+    </div>
+    <div class="container" id="btn">
+        <div class="col s12 m5 l4 center-align">
+            <button>Fazer parte da equipe</button>
+        </div>
+    </div>
+
 
     <!-- FOOTER -->
     <footer class="page-footer" id="footer">
@@ -59,26 +126,28 @@
             <div class="row">
                 <div class="col l6 s12">
                     <h5 class="white-text">HIGH PERFORMANCE</h5>
-                    <p class="grey-text text-lighten-4">Monitores os seus alunos.</p>
+                    <p class="white-text text-lighten-4">Monitores os seus alunos.</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
-                    <h5 class="white-text">Links</h5>
                     <ul>
-                        <li><a class="grey-text text-lighten-3" href="index.html">Home</a></li>
-                        <li><a class="grey-text text-lighten-3" href="alunos.html">Sobre</a></li>
-                        <li><a class="grey-text text-lighten-3" href="crie.html">Entrar</a></li>
-                        <li><a class="grey-text text-lighten-3" href="controle.html">Registrar</a></li>
+                        <li><a class="white-text text-lighten-3" href="index.html">Home</a></li>
+                        <li><a class="white-text text-lighten-3" href="alunos.html">Alunos</a></li>
+                        <li><a class="white-text text-lighten-3" href="crie.html">Crie</a></li>
+                        <li><a class="white-text text-lighten-3" href="controle.html">Controle</a></li>
+                        <li><a class="white-text text-lighten-3" href="treino.html">Treino</a></li>
                     </ul>
                 </div>
             </div>
         </div>
         <div class="footer-copyright">
-            <div class="container">
+            <div class="container white-text">
                 © 2020 High Performance Copyright
-                <a class="grey-text text-lighten-4 right" href="https://logomakr.com">Created my free logo at LogoMakr.com</a>
+                <a class="white-text text-lighten-4 right" href="https://logomakr.com">Created my free logo at LogoMakr.com</a>
             </div>
         </div>
     </footer>
+
+
 
 
     <!-- Compiled and minified JavaScript -->
