Adicionando voltar ao topo

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <h6>COMECE <span>AGORA</span> A USAR<br> O <span>HIGH PERFORMANCE</span></h6>
                 <p class="right-align">Cadastre-se<br> e comece a usar!</p>
             </div>
-            <button>SE INCREVER</button>
+            <button>Se inscrever</button>
         </div>
         <div class="col s12 m12 l7 left-align">
             <img class="responsive-img" src="img/ilustracao.png" alt="">
@@ -245,23 +245,26 @@
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
-                    <h5 class="black-text">HIGH PERFORMANCE</h5>
-                    <p class="black-text text-lighten-4">Monitores os seus alunos.</p>
+                    <h5 class="white-text">HIGH PERFORMANCE</h5>
+                    <p class="white-text text-lighten-4">Monitores os seus alunos.</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <ul>
-                        <li><a class="black-text text-lighten-3" href="index.html">Home</a></li>
-                        <li><a class="black-text text-lighten-3" href="sobre.html">Sobre</a></li>
-                        <li><a class="black-text text-lighten-3" href="#">Entrar</li>
-                        <li><a class="black-text text-lighten-3" href="#">Registrar</a></li>
+                        <li><a class="white-text text-lighten-3" href="index.html">Home</a></li>
+                        <li><a class="white-text text-lighten-3" href="sobre.html">Sobre</a></li>
+                        <li><a class="white-text text-lighten-3" href="#">Entrar</li>
+                        <li><a class="white-text text-lighten-3" href="#">Registrar</a></li>
                     </ul>
+                </div>
+                <div class="col l1 s4 right">
+                    <a href="#top" class="glyphicon glyphicon-chevron-up"><img src="img/up.png" alt="Voltar ao topo"></a>
                 </div>
             </div>
         </div>
         <div class="footer-copyright">
-            <div class="container black-text">
+            <div class="container white-text">
                 © 2020 High Performance Copyright
-                <a class="black-text text-lighten-4 right" href="https://logomakr.com">Created my free logo at LogoMakr.com</a>
+                <a class="white-text text-lighten-4 right" href="https://logomakr.com">Created my free logo at LogoMakr.com</a>
             </div>
         </div>
     </footer>
@@ -271,6 +274,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/topo.js"></script>
     <script>
         $(document).ready(function() {
             $('.carousel').carousel();
