--- a/sobre.html
+++ b/sobre.html
@@ -78,30 +78,38 @@
         <div class="container">
             <div class="row">
                 <div class="col s12 m6 l6 center-align">
-                    <img class="responsive-img" src="img/rafael.jpg" alt="">
-                    <p>Rafael Santana</p>
-                    <span>Sei lá</span>
+                    <a href="https://github.com/rafalmeida73">
+                        <img class="responsive-img" src="img/rafael.jpg" alt="">
+                        <p>Rafael Santana</p>
+                        <span>Sei lá</span>
+                    </a>
                     <br>
                     <br>
                 </div>
                 <div class="col s12 m6 l6 center-align">
-                    <img class="responsive-img" src="img/roni.png" alt="">
-                    <p>Roni Cleber</p>
-                    <span>Sei lá</span>
+                    <a href="https://github.com/ronycleber">
+                        <img class="responsive-img" src="img/roni.png" alt="">
+                        <p>Roni Cleber</p>
+                        <span>Sei lá</span>
+                    </a>
                     <br>
                     <br>
                 </div>
                 <div class="col s12 m6 l6 center-align">
-                    <img class="responsive-img" src="img/paulo.png" alt="">
-                    <p>Paulo Ernesto</p>
-                    <span>Sei lá</span>
+                    <a href="https://github.com/pauloernestom">
+                        <img class="responsive-img" src="img/paulo.png" alt="">
+                        <p>Paulo Ernesto</p>
+                        <span>Sei lá</span>
+                    </a>
                     <br>
                     <br>
                 </div>
                 <div class="col s12 m6 l6 center-align">
-                    <img class="responsive-img" src="img/diogo.png" alt="">
-                    <p>Diogo</p>
-                    <span>Sei lá</span>
+                    <a href="https://github.com/Dogix11">
+                        <img class="responsive-img" src="img/diogo.png" alt="">
+                        <p>Diogo</p>
+                        <span>Sei lá</span>
+                    </a>
                     <br>
                     <br>
                 </div>
@@ -131,11 +139,13 @@
                 <div class="col l4 offset-l2 s12">
                     <ul>
                         <li><a class="white-text text-lighten-3" href="index.html">Home</a></li>
-                        <li><a class="white-text text-lighten-3" href="alunos.html">Alunos</a></li>
-                        <li><a class="white-text text-lighten-3" href="crie.html">Crie</a></li>
-                        <li><a class="white-text text-lighten-3" href="controle.html">Controle</a></li>
-                        <li><a class="white-text text-lighten-3" href="treino.html">Treino</a></li>
+                        <li><a class="white-text text-lighten-3" href="sobre.html">Sobre</a></li>
+                        <li><a class="white-text text-lighten-3" href="#">Entrar</li>
+                        <li><a class="white-text text-lighten-3" href="#">Registrar</a></li>
                     </ul>
+                </div>
+                <div class="col l1 s4 right">
+                    <a href="#top" class="glyphicon glyphicon-chevron-up"><img src="img/up.png" alt="Voltar ao topo"></a>
                 </div>
             </div>
         </div>
@@ -154,6 +164,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/topo.js"></script>
 </body>
 
 </html>
