--- a/treino.html
+++ b/treino.html
@@ -9,7 +9,7 @@
     <title>Treino</title>
     <!-- Compiled and minified CSS -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="./css/alunos.css">
+    <link rel="stylesheet" href="./css/treino.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 
@@ -69,6 +69,9 @@
                         <li><a class="white-text text-lighten-3" href="treino.html">Treino</a></li>
                     </ul>
                 </div>
+                <div class="col l1 s4 right">
+                    <a href="#top" class="glyphicon glyphicon-chevron-up"><img src="img/up.png" alt="Voltar ao topo"></a>
+                </div>
             </div>
         </div>
         <div class="footer-copyright">
@@ -87,6 +90,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/topo.js"></script>
 </body>
 
 </html>
