--- a/alunos.html
+++ b/alunos.html
@@ -163,6 +163,9 @@
                         <li><a class="white-text text-lighten-3" href="treino.html">Treino</a></li>
                     </ul>
                 </div>
+                <div class="col l1 s4 right">
+                    <a href="#top" class="glyphicon glyphicon-chevron-up"><img src="img/up.png" alt="Voltar ao topo"></a>
+                </div>
             </div>
         </div>
         <div class="footer-copyright">
@@ -181,6 +184,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/topo.js"></script>
 </body>
 
 </html>
