arrumando nav mobile

--- a/alunos.html
+++ b/alunos.html
@@ -42,7 +42,7 @@
     <ul id="mobile-navbar" class="sidenav">
         <li><a href="index.html" class="black-text">Home</a></li>
         <li><a href="alunos.html" class="black-text">Alunos</a></li>
-        <li><a href="calendario.html" class="black-text">Crie</a></li>
+        <li><a href="crie.html" class="black-text">Crie</a></li>
         <li><a href="controle.html" class="black-text">Controle</a></li>
         <li><a href="treino.html" class="black-text">Treino</a></li>
     </ul>
@@ -92,11 +92,11 @@
                     </div>
 
                     <div class="col s3 m3 l3 center-align">
-                        <h5>Nome</h5>
+                        <h5>Foto</h5>
                     </div>
 
                     <div class="col s3 m3 l3 center-align">
-                        <h5>E-mail</h5>
+                        <h5>Nome</h5>
                     </div>
 
                     <div class="col s3 m3 l3 center-align">
@@ -121,7 +121,7 @@
                 </div>
 
                 <div class="col s3 m3 l3 center-align">
-                    <p>JUNIN@JOSE.COM</p>
+                    <p>José</p>
                 </div>
 
                 <div class="col s3 m3 l3 center-align">
@@ -138,7 +138,7 @@
                         </p>
                     </form>
                 </div>
-                <div class="col l3 m2 s3 right-align">
+                <div class="col l3 m2 s3">
                     <button>REMOVER ALUNO</button>
                 </div>
             </div>
