--- a/crie.html
+++ b/crie.html
@@ -39,7 +39,7 @@
     <ul id="mobile-navbar" class="sidenav">
         <li><a href="index.html" class="black-text">Home</a></li>
         <li><a href="alunos.html" class="black-text">Alunos</a></li>
-        <li><a href="calendario.html" class="black-text">Crie</a></li>
+        <li><a href="crie.html" class="black-text">Crie</a></li>
         <li><a href="controle.html" class="black-text">Controle</a></li>
         <li><a href="treino.html" class="black-text">Treino</a></li>
     </ul>
